docs: move companion app install + dev/testing out of README
Plugin-hub reviewer (riktenx) asked for companion app installation and
development/testing instructions to live in a separate markdown file.
Add DEVELOPMENT.md (app download links, building, distribution, running
locally) and trim README.md to plugin description, setup, sync toggles,
and features.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>